# pyazr

./: .gitignore  LICENSE  README.md  build.sh  meta.yaml  pyproject.toml  setup.cfg  setup.py
AZURE2/: CMakeLists.txt  README.md  build.sh
AZURE2/api/: CMakeLists.txt
AZURE2/api/include/: AZUREAPI.h  AZURESocket.h
AZURE2/api/src/: AZUREAPI.cpp  AZURESocket.cpp  CMakeLists.txt  main.cpp
AZURE2/cmake/Modules/: FindMinuit2.cmake  FindQwt.cmake  FindQwt.cmake-old  Findgsl.cmake
AZURE2/coul/include/: complex_functions.H
AZURE2/coul/src/: CMakeLists.txt
AZURE2/gui/include/: AZUREMainThread.h  AZUREPlot.h  AZURESetup.h  AddLevelDialog.h  AddPairDialog.h  EditOptionsDialog.h  FilteredTextEdit.h  LevelsHeaderView.h  PairsTab.h
AZURE2/gui/src/: AZUREPlot.cpp  AZURESetup.cpp  AboutAZURE2Dialog.cpp  AddPairDialog.cpp  AddSegDataDialog.cpp  AddSegTestDialog.cpp  AddTargetIntDialog.cpp  CMakeLists.txt  ChannelDetails.cpp  EditChecksDialog.cpp  EditDirsDialog.cpp  EditOptionsDialog.cpp  InTabDocs.cpp  InfoDialog.cpp  LevelsTab.cpp  PairsTab.cpp  PlotTab.cpp  RichTextDelegate.cpp  RunTab.cpp  SegmentsTab.cpp  TargetIntModel.cpp  TargetIntTab.cpp  main.cpp
AZURE2/include/: CNuc.h  Config.h  PPair.h  WhitFunc.h
AZURE2/src/: AZURE2.cpp  CMakeLists.txt  CNuc.cpp  Config.cpp  EData.cpp  EPoint.cpp  JGroup.cpp  PPair.cpp
src/pyazr/: __init__.py  api.py  azure2.py  brick.py  calc.py  client.py  configuration.py  data.py  mcmc.py  minimizer.py  minuit.py  server.py  thread.py
src/pyazr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
