[metadata]
name = pyazr
version = 1.0.0
author = Jakub Skowronski
author_email = jakub.skowronski@pd.infn.it
description = A Python interface for AZURE2.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skowrons94/pyazr
project_urls = 
	Bug Tracker = https://github.com/skowrons94/pyazr/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Operating System :: Unix

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

